# rag-bot

./: README.md  docker-compose.yml  pyproject.toml
app/: settings.py
app/bot/: basic.py  main.py
app/llm/: chat.py
app/rag/: database.py  service.py  transform.py
app/utils/: io.py  timer.py
